Trying to fix the overlapping issue(Changed hero class)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -121,6 +121,7 @@ nav ul li {
   .hero img {
     height: auto;
     width: 100% !important;
+    margin-bottom: 2rem;
   }
 }
 
